# glimpsi

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: styles.css
shared/: cargo.toml
shared/src/: lib.rs
shared/src/types/: content.rs  mod.rs  modifier.rs  shortcut.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  content.rs  mod.rs  window.rs
src-tauri/src/config/: file.rs  log.rs  mapper.rs  mod.rs  shortcut.rs  types.rs  types_s.rs
src-tauri/src/events/: app.rs  window.rs
src-tauri/src/types/: app_file.rs  content.rs  key.rs  mod.rs  modifier.rs  settings.rs  shortcut.rs  state.rs
src/app/: app.rs  components.rs  mod.rs
