[package]
name = "glimpsi"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glimpsi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.2.0"
window-vibrancy = "0.6.0"
directories = "5.0"
serde_yaml = "0.9.34"
toml = "0.8.22"
fern = "0.7.1"
chrono = "0.4.41"
log = "0.4.27"
serde = { workspace = true}
serde_json = { workspace = true }
shared = { workspace = true }
